--- a/index.html
+++ b/index.html
@@ -174,10 +174,26 @@
                         <video id="video-preview-small" class="w-full rounded border border-white/10" muted autoplay loop></video>
                     </div>
 
-                    <h3 class="text-[10px] font-black text-slate-500 uppercase tracking-[0.2em] mb-4">Zvuky (MP3)</h3>
+                    <h3 class="text-[10px] font-black text-slate-500 uppercase tracking-[0.2em] mb-4 text-emerald-500">Hudba na pozadí (MP3)</h3>
+                    <label id="music-dropzone" class="w-full bg-emerald-500/5 hover:bg-emerald-500/10 border border-dashed border-emerald-500/30 rounded-xl p-4 flex flex-col items-center justify-center cursor-pointer transition-all mb-6">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#10b981" stroke-width="2" class="mb-2"><path d="M9 18V5l12-2v13"/><circle cx="6" cy="18" r="3"/><circle cx="18" cy="16" r="3"/></svg>
+                        <span class="text-[10px] font-bold text-emerald-200">Vybrať Hudbu</span>
+                        <input type="file" id="music-upload" class="hidden" accept="audio/mpeg">
+                    </label>
+                    <div id="music-status" class="hidden mb-6 p-3 glass rounded-lg text-[10px]">
+                        <div class="flex items-center justify-between">
+                            <span class="text-emerald-400 font-bold flex items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="mr-1"><path d="M9 18V5l12-2v13"/><circle cx="6" cy="18" r="3"/><circle cx="18" cy="16" r="3"/></svg>
+                                Hudba nastavená
+                            </span>
+                            <button onclick="removeMusic()" class="text-red-500">X</button>
+                        </div>
+                    </div>
+
+                    <h3 class="text-[10px] font-black text-slate-500 uppercase tracking-[0.2em] mb-4">Efekty / Zvuky (MP3)</h3>
                     <label class="w-full bg-white/5 hover:bg-white/10 border border-dashed border-white/10 rounded-xl p-4 flex flex-col items-center justify-center cursor-pointer transition-all mb-4">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="mb-2 text-slate-400"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" x2="12" y1="3" y2="15"/></svg>
-                        <span class="text-[10px] font-bold">Nahrať MP3</span>
+                        <span class="text-[10px] font-bold">Nahrať Súbory</span>
                         <input type="file" id="asset-upload" class="hidden" accept="audio/mpeg" multiple>
                     </label>
                     <div id="asset-list" class="space-y-2"></div>
@@ -196,16 +212,16 @@
                 </div>
 
                 <!-- Settings Sidebar -->
-                <div id="studio-settings-sidebar" class="absolute right-0 top-0 h-full w-64 bg-[#111114] border-l border-white/10 p-6 z-40 translate-x-full transition-transform duration-300">
+                <div id="studio-settings-sidebar" class="absolute right-0 top-0 h-full w-64 bg-[#111114] border-l border-white/10 p-6 z-40 translate-x-full transition-transform duration-300 shadow-2xl">
                     <h3 class="font-black text-xs uppercase tracking-widest text-blue-500 mb-8 text-center">Engine Settings</h3>
                     <div class="space-y-6">
                         <div>
                             <label class="text-[10px] font-bold text-slate-500 uppercase block mb-2">Kvalita</label>
-                            <select id="studio-setting-quality" onchange="updatePreview()" class="w-full bg-[#1c1c21] rounded-lg p-2 text-sm outline-none"><option value="low">Low</option><option value="medium">Medium</option><option value="high" selected>High</option></select>
+                            <select id="studio-setting-quality" onchange="updatePreview()" class="w-full bg-[#1c1c21] rounded-lg p-2 text-sm outline-none border border-white/5"><option value="low">Low</option><option value="medium">Medium</option><option value="high" selected>High</option></select>
                         </div>
                         <div>
                             <label class="text-[10px] font-bold text-slate-500 uppercase block mb-2">FPS Limit</label>
-                            <select id="studio-setting-fps" onchange="updatePreview()" class="w-full bg-[#1c1c21] rounded-lg p-2 text-sm outline-none"><option value="30">30</option><option value="60" selected>60</option><option value="0">Max</option></select>
+                            <select id="studio-setting-fps" onchange="updatePreview()" class="w-full bg-[#1c1c21] rounded-lg p-2 text-sm outline-none border border-white/5"><option value="30">30</option><option value="60" selected>60</option><option value="0">Max</option></select>
                         </div>
                     </div>
                 </div>
@@ -242,6 +258,7 @@
         let currentEditingId = null;
         let gameAssets = {};
         let gameVideo = null; 
+        let gameMusic = null; 
 
         // --- HUD SCRIPT INJECTION ---
         const HUD_SCRIPT = `
@@ -278,6 +295,13 @@
                                 html += '<div class="lb-user"><span class="lb-dot"></span>' + name + '</div>';
                             });
                             list.innerHTML = html;
+                        }
+
+                        // Background Music Logic - Looping Reinforced
+                        if (window.MENTAL_MUSIC) {
+                            const bgMusic = new Audio(window.MENTAL_MUSIC);
+                            bgMusic.loop = true; // Nastavené na opakovanie
+                            bgMusic.play().catch(e => console.warn("Auto-play blocked, music will play after interaction."));
                         }
                     };
 
@@ -330,6 +354,31 @@
             document.getElementById('video-dropzone').classList.remove('hidden');
         }
 
+        // --- MUSIC UPLOAD ---
+        document.getElementById('music-upload').addEventListener('change', async (e) => {
+            const file = e.target.files[0];
+            if (!file) return;
+            const reader = new FileReader();
+            reader.onload = (ev) => {
+                gameMusic = ev.target.result;
+                showMusicStatus();
+                updatePreview();
+            };
+            reader.readAsDataURL(file);
+        });
+
+        function showMusicStatus() {
+            document.getElementById('music-status').classList.remove('hidden');
+            document.getElementById('music-dropzone').classList.add('hidden');
+        }
+
+        function removeMusic() {
+            gameMusic = null;
+            document.getElementById('music-status').classList.add('hidden');
+            document.getElementById('music-dropzone').classList.remove('hidden');
+            updatePreview();
+        }
+
         // --- ASSETS ---
         document.getElementById('asset-upload').addEventListener('change', async (e) => {
             for (let file of e.target.files) {
@@ -343,8 +392,8 @@
             list.innerHTML = '';
             Object.keys(gameAssets).forEach(name => {
                 const div = document.createElement('div');
-                div.className = "p-2 bg-white/5 rounded-lg flex items-center justify-between text-[10px] font-bold";
-                div.innerHTML = `<span class="truncate">${name}</span><button onclick="removeAsset('${name}')" class="text-red-500">X</button>`;
+                div.className = "p-2 bg-white/5 rounded-lg flex items-center justify-between text-[10px] font-bold border border-white/5";
+                div.innerHTML = `<span class="truncate">${name}</span><button onclick="removeAsset('${name}')" class="text-red-500 hover:text-red-400">X</button>`;
                 list.appendChild(div);
             });
         }
@@ -365,7 +414,9 @@
             switchView('studio');
             gameAssets = {};
             gameVideo = null;
+            gameMusic = null;
             removeVideo();
+            removeMusic();
             if (id) {
                 db.transaction('games', 'readonly').objectStore('games').get(id).onsuccess = (e) => {
                     const g = e.target.result;
@@ -376,7 +427,9 @@
                     document.getElementById('studio-editor').value = g.code || "";
                     gameAssets = g.assets || {};
                     gameVideo = g.video || null;
+                    gameMusic = g.music || null;
                     if (gameVideo) showVideoStatus();
+                    if (gameMusic) showMusicStatus();
                     renderAssets();
                     updatePreview();
                 };
@@ -384,7 +437,7 @@
                 currentEditingId = null;
                 document.getElementById('studio-title').value = "Nová Hra";
                 document.getElementById('studio-icon').value = "🎮";
-                document.getElementById('studio-editor').value = `<!DOCTYPE html><html><body style="background:#000;color:#fff;display:flex;justify-content:center;align-items:center;height:100vh;"><h1>MOJA HRA</h1><\/body><\/html>`;
+                document.getElementById('studio-editor').value = `<!DOCTYPE html><html><body style="background:#000;color:#fff;display:flex;justify-content:center;align-items:center;height:100vh;margin:0;"><h1>MOJA HRA</h1><\/body><\/html>`;
                 updatePreview();
             }
         }
@@ -393,7 +446,7 @@
         function updatePreview() {
             const quality = document.getElementById('studio-setting-quality').value;
             const fps = document.getElementById('studio-setting-fps').value;
-            const config = `<script>window.MENTAL_SOUNDS=${JSON.stringify(gameAssets)};window.MENTAL_CONFIG={quality:"${quality}",fps:${fps}};<\/script>` + HUD_SCRIPT;
+            const config = `<script>window.MENTAL_SOUNDS=${JSON.stringify(gameAssets)};window.MENTAL_MUSIC=${JSON.stringify(gameMusic)};window.MENTAL_CONFIG={quality:"${quality}",fps:${fps}};<\/script>` + HUD_SCRIPT;
             const blob = new Blob([config + document.getElementById('studio-editor').value], { type: 'text/html' });
             document.getElementById('studio-preview').src = URL.createObjectURL(blob);
         }
@@ -405,12 +458,13 @@
                 code: document.getElementById('studio-editor').value,
                 assets: gameAssets,
                 video: gameVideo,
+                music: gameMusic,
                 config: { quality: document.getElementById('studio-setting-quality').value, fps: parseInt(document.getElementById('studio-setting-fps').value) },
                 updatedAt: Date.now()
             };
             if (currentEditingId) game.id = currentEditingId;
             db.transaction('games', 'readwrite').objectStore('games').put(game).onsuccess = () => {
-                showToast("Zverejnené!");
+                showToast("Hra zverejnená!");
                 setTimeout(() => switchView('player'), 800);
             };
         }
@@ -424,7 +478,7 @@
                 if (cursor) {
                     const g = cursor.value;
                     const card = document.createElement('div');
-                    card.className = "game-card group relative h-64 glass rounded-3xl overflow-hidden cursor-pointer transition-all hover:scale-[1.02]";
+                    card.className = "game-card group relative h-64 glass rounded-3xl overflow-hidden cursor-pointer transition-all hover:scale-[1.02] border border-white/5";
                     card.innerHTML = `
                         ${g.video ? `<video class="video-preview absolute inset-0 w-full h-full object-cover z-10" src="${g.video}" muted loop></video>` : ''}
                         <div class="absolute inset-0 flex flex-col items-center justify-center z-0 group-hover:opacity-0 transition-opacity">
@@ -433,9 +487,9 @@
                         </div>
                         <div class="absolute inset-0 bg-blue-600/20 opacity-0 group-hover:opacity-100 z-20 flex flex-col items-center justify-end p-6 transition-all">
                             <div class="flex space-x-2 w-full">
-                                <button onclick="event.stopPropagation(); playGame(${g.id})" class="flex-1 bg-white text-blue-600 py-3 rounded-xl font-black text-sm uppercase">HRAŤ</button>
-                                <button onclick="event.stopPropagation(); openStudio(${g.id})" class="p-3 bg-white/10 rounded-xl"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg></button>
-                                <button onclick="event.stopPropagation(); deleteGame(${g.id})" class="p-3 bg-white/10 rounded-xl hover:text-red-500"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 6h18"/><path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"/><path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"/></svg></button>
+                                <button onclick="event.stopPropagation(); playGame(${g.id})" class="flex-1 bg-white text-blue-600 py-3 rounded-xl font-black text-sm uppercase shadow-lg">HRAŤ</button>
+                                <button onclick="event.stopPropagation(); openStudio(${g.id})" class="p-3 bg-white/10 rounded-xl hover:bg-white/20 transition-all"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg></button>
+                                <button onclick="event.stopPropagation(); deleteGame(${g.id})" class="p-3 bg-white/10 rounded-xl hover:bg-red-500/20 hover:text-red-500 transition-all"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 6h18"/><path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"/><path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"/></svg></button>
                             </div>
                         </div>
                     `;
@@ -457,7 +511,7 @@
                 document.getElementById('overlay-title').innerText = g.title;
                 document.getElementById('overlay-icon').innerText = g.icon;
                 document.getElementById('view-game-overlay').classList.remove('hidden');
-                const config = `<script>window.MENTAL_SOUNDS=${JSON.stringify(g.assets || {})};window.MENTAL_CONFIG=${JSON.stringify(g.config || {quality:'high',fps:60})};<\/script>` + HUD_SCRIPT;
+                const config = `<script>window.MENTAL_SOUNDS=${JSON.stringify(g.assets || {})};window.MENTAL_MUSIC=${JSON.stringify(g.music || null)};window.MENTAL_CONFIG=${JSON.stringify(g.config || {quality:'high',fps:60})};<\/script>` + HUD_SCRIPT;
                 const blob = new Blob([config + g.code], { type: 'text/html' });
                 document.getElementById('game-runner').src = URL.createObjectURL(blob);
             };
